adding vactionPy to final HW

--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "4          63        4.47      MV  1619410559  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4a2fdd1ee3a486faf2675294ccb92c5",
+       "model_id": "7f1286fb486a40d6a691c67a432b188b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "4        4.47      MV  1619410559  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -479,12 +479,13 @@
        "518        4.61      PK  1619410675  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#created narrowed down df \n",
     "Narrow_Weather_df = Narrow_Weather_df.loc[(Narrow_Weather_df[\"Max_Temp\"] < Ideal_Max_Temp) &\n",
     "                                         (Narrow_Weather_df[\"Max_Temp\"] > Ideal_Min_Temp) & \n",
     "                                         (Narrow_Weather_df[\"Wind_Speed\"] < Ideal_Wind_Speed) &\n",
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -541,6 +542,7 @@
        "      <th>Wind_Speed</th>\n",
        "      <th>Country</th>\n",
        "      <th>Date</th>\n",
+       "      <th>Hotel_Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -555,6 +557,7 @@
        "      <td>3.27</td>\n",
        "      <td>ID</td>\n",
        "      <td>1619410636</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>483</th>\n",
@@ -567,6 +570,7 @@
        "      <td>1.25</td>\n",
        "      <td>PF</td>\n",
        "      <td>1619410415</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>499</th>\n",
@@ -579,6 +583,7 @@
        "      <td>2.30</td>\n",
        "      <td>KY</td>\n",
        "      <td>1619410728</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>518</th>\n",
@@ -591,6 +596,7 @@
        "      <td>4.61</td>\n",
        "      <td>PK</td>\n",
        "      <td>1619410675</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -603,21 +609,220 @@
        "499  bodden town  19.2833  -81.2500     80.60        78           0   \n",
        "518      karachi  24.9056   67.0822     86.00        66           0   \n",
        "\n",
-       "     Wind_Speed Country        Date  \n",
-       "100        3.27      ID  1619410636  \n",
-       "483        1.25      PF  1619410415  \n",
-       "499        2.30      KY  1619410728  \n",
-       "518        4.61      PK  1619410675  "
+       "     Wind_Speed Country        Date Hotel_Name  \n",
+       "100        3.27      ID  1619410636             \n",
+       "483        1.25      PF  1619410415             \n",
+       "499        2.30      KY  1619410728             \n",
+       "518        4.61      PK  1619410675             "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Hotel_df = Narrow_Weather_df\n",
-    "Hotel_df.head()"
+    "#added column on DF \"Hotel Name\"\n",
+    "hotel_df = Narrow_Weather_df\n",
+    "hotel_df[\"Hotel_Name\"]= \"\"\n",
+    "hotel_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving Results for Index 100: singaraja Location -8.112,115.0882\n",
+      "Closest hotel with-in 5000 meters of singaraja is Puri Bagus Lovina Resort \n",
+      "------------\n",
+      "Retrieving Results for Index 483: fare Location -16.7,-151.0167\n",
+      "Closest hotel with-in 5000 meters of fare is Maitai Lapita Village Huahine \n",
+      "------------\n",
+      "Retrieving Results for Index 499: bodden town Location 19.2833,-81.25\n",
+      "Closest hotel with-in 5000 meters of bodden town is Will T Place \n",
+      "------------\n",
+      "Retrieving Results for Index 518: karachi Location 24.9056,67.0822\n",
+      "Closest hotel with-in 5000 meters of karachi is Sadaat \n",
+      "------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#base urls and paramater to pull request\n",
+    "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "params = {\"location\": \"\",  \n",
+    "    \"radius\": 5000,\n",
+    "    \"types\": \"lodging\",\n",
+    "    \"key\": g_key}\n",
+    "\n",
+    "# use iterrows to iterate through pandas dataframe\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "\n",
+    "    # get restaurant type from df\n",
+    "    City_Name = row['City']\n",
+    "    Lat = row['Lat']\n",
+    "    Lng = row['Lng']\n",
+    "    params[\"location\"]= f\"{Lat},{Lng}\"\n",
+    "    print(f\"Retrieving Results for Index {index}: {City_Name} Location {Lat},{Lng}\")\n",
+    "    response = requests.get(base_url,params=params).json()\n",
+    "    results = response['results']\n",
+    "    try:\n",
+    "        print(f\"Closest hotel with-in 5000 meters of {City_Name} is {results[0]['name']} \")\n",
+    "        hotel_df.loc[index,\"Hotel_Name\"]=results[0]['name']\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    except (KeyError, IndexError):\n",
+    "        print(\"Missing field/result... skipping.\")\n",
+    "        \n",
+    "    print(f\"------------\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max_Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind_Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Hotel_Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>singaraja</td>\n",
+       "      <td>-8.1120</td>\n",
+       "      <td>115.0882</td>\n",
+       "      <td>86.58</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.27</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>1619410636</td>\n",
+       "      <td>Puri Bagus Lovina Resort</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>483</th>\n",
+       "      <td>fare</td>\n",
+       "      <td>-16.7000</td>\n",
+       "      <td>-151.0167</td>\n",
+       "      <td>81.50</td>\n",
+       "      <td>63</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>1619410415</td>\n",
+       "      <td>Maitai Lapita Village Huahine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>bodden town</td>\n",
+       "      <td>19.2833</td>\n",
+       "      <td>-81.2500</td>\n",
+       "      <td>80.60</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>KY</td>\n",
+       "      <td>1619410728</td>\n",
+       "      <td>Will T Place</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>518</th>\n",
+       "      <td>karachi</td>\n",
+       "      <td>24.9056</td>\n",
+       "      <td>67.0822</td>\n",
+       "      <td>86.00</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>PK</td>\n",
+       "      <td>1619410675</td>\n",
+       "      <td>Sadaat</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            City      Lat       Lng  Max_Temp  Humidity  Cloudiness  \\\n",
+       "100    singaraja  -8.1120  115.0882     86.58        60           0   \n",
+       "483         fare -16.7000 -151.0167     81.50        63           2   \n",
+       "499  bodden town  19.2833  -81.2500     80.60        78           0   \n",
+       "518      karachi  24.9056   67.0822     86.00        66           0   \n",
+       "\n",
+       "     Wind_Speed Country        Date                     Hotel_Name  \n",
+       "100        3.27      ID  1619410636       Puri Bagus Lovina Resort  \n",
+       "483        1.25      PF  1619410415  Maitai Lapita Village Huahine  \n",
+       "499        2.30      KY  1619410728                   Will T Place  \n",
+       "518        4.61      PK  1619410675                         Sadaat  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOTE: Do not change any of the code in this cell\n",
+    "\n",
+    "# Using the template add the hotel marks to the heatmap\n",
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Name</dt><dd>{Hotel_Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
+    "# Store the DataFrame Row\n",
+    "# NOTE: be sure to update with your DataFrame name\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
+    "markers = gmaps.marker_layer(locations)"
    ]
   },
   {
@@ -629,36 +834,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NOTE: Do not change any of the code in this cell\n",
-    "\n",
-    "# Using the template add the hotel marks to the heatmap\n",
-    "info_box_template = \"\"\"\n",
-    "<dl>\n",
-    "<dt>Name</dt><dd>{Hotel Name}</dd>\n",
-    "<dt>City</dt><dd>{City}</dd>\n",
-    "<dt>Country</dt><dd>{Country}</dd>\n",
-    "</dl>\n",
-    "\"\"\"\n",
-    "# Store the DataFrame Row\n",
-    "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f1286fb486a40d6a691c67a432b188b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
+    "hotel_layer = gmaps.symbol_layer(\n",
+    "    locations, fill_color=\"black\",\n",
+    "    stroke_color=\"black\",scale=3,\n",
+    "    info_box_content=hotel_info\n",
+    ")\n",
     "\n",
-    "\n",
-    "# Display figure\n"
+    "# Display figure\n",
+    "fig.add_layer(markers)\n",
+    "fig.add_layer(hotel_layer)\n",
+    "fig"
    ]
   },
   {
